--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "gapi": "^0.0.3",
+    "google-spreadsheet": "^4.1.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
